--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -10,8 +10,8 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, 'Helvetica Neue',
-    Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
